# PandoraWear

./: .gitignore  Makefile  README.md  alembic.ini  debug.env  docker-compose.debug.yaml  docker-compose.yaml  pyproject.toml
apps/admin-ui/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/admin-ui/src/: App.tsx  main.tsx  theme.ts
apps/admin-ui/src/api/: axios.ts  errors.ts
apps/admin-ui/src/features/auth/: LoginCard.tsx  SignUpCard.tsx
apps/admin-ui/src/layouts/: AppTopBar.tsx  MainAppLayout.tsx  ProtectedLayout.tsx
apps/admin-ui/src/providers/: UserProvider.tsx
apps/common/: config.py  const.py  init-topics.sh
apps/common/core/protocols/: cache.py  repository.py
apps/common/core/protocols/broker/: consumer.py
apps/common/dao/: config.py  device.py  pandora.py  session.py  user.py
apps/common/infrastructure/broker/: consumer.py  producer.py
apps/common/infrastructure/cache/: memory.py  redis.py
apps/common/infrastructure/database/: database.py
apps/common/infrastructure/database/migrations/: env.py
apps/common/infrastructure/database/models/: __init__.py  base.py  credentials.py  devices.py  user.py
apps/common/infrastructure/repository/: user.py
apps/common/repository/: config.py  device.py  user.py
apps/common/tools/: date.py
apps/gateway/: Dockerfile  Dockerfile.debug  Dockerfile.dev  config.py  di.py  main.py
apps/gateway/api/: __init__.py  auth.py  engine.py  health.py  schemas.py  telemetry.py
apps/gateway/api/middleware/: auth.py
apps/gateway/api/routes/: app.py  auth.py  config.py  device.py  engine.py  health.py  pairing.py  pandora.py  telemetry.py
apps/gateway/auth/: crypto.py  token.py
apps/gateway/common/: context.py
apps/gateway/core/: exceptions.py  models.py
apps/gateway/core/protocols/: i_engine.py  i_pairing.py  i_pandora.py
apps/gateway/services/: auth.py  config.py  device.py  engine.py  pairing.py  pandora.py  user.py
apps/gateway/services/pandora/: client.py  manager.py  session.py  session_manager.py
apps/gateway/services/pandora/const/: __init__.py  command.py  field.py  url.py  (+1 more)
apps/gateway/services/pandora_client/: client.py  command.py  const.py  excepton.py  field.py  session.py  session_manager.py  url.py
common/: command.py
common/consumer/: consumer.py
common/core/protocols/: icache.py  repository.py
common/core/protocols/broker/: producer.py
common/infrastructure/broker/: consumer.py  producer.py
common/infrastructure/cache/: memory.py  redis.py
common/infrastructure/repository/: user.py
common/models/: user.py
common/producer/: producer.py
gateway/: app.py  config.py  di.py
gateway/api/: __init__.py  engine.py  health.py  pairing.py  schemas.py  telemetry.py
gateway/auth/: deps.py
gateway/core/: models.py  protocols.py
gateway/pandora/: api.py  base.py  excepton.py
gateway/pandora/const/: field.py  request.py  url.py
gateway/pandora/models/: device.py
gateway/services/: engine.py  pairing.py
postgres/: postgresql.conf
tests/integration/: conftest.py  test_users_api.py
(+8 files in other folders)
