[project]
name = "pandorawear"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "aiokafka>=0.12.0",
    "black>=25.9.0",
    "config-reader>=0.8",
    "dishka>=1.7.2",
    "fastapi>=0.120.1",
    "pydantic-settings>=2.11.0",
    "tools>=1.0.6",
]

[tool.ruff.per-file-ignores]
"*.py" = ["F401"]

[tool.ruff.flake8-tidy-imports.banned-api]
"dishka.inject" = "Импортируй inject только из dishka.integrations.fastapi"
