[project]
name = "pandorawear"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "aiokafka>=0.12.0",
    "alembic[asyncio]>=1.17.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "black>=25.9.0",
    "config-reader>=0.8",
    "dishka>=1.7.2",
    "fastapi[standard]>=0.120.1",
    "myapplication>=0.1.0",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "tools>=1.0.6",
]

[tool.ruff.per-file-ignores]
"*.py" = ["F401"]

[tool.ruff.flake8-tidy-imports.banned-api]
"dishka.inject" = "Импортируй inject только из dishka.integrations.fastapi"
